tests/specs/run/sourcemap_none/no_sourcemap.js
// JavaScript file without any source map - should work normally
function throwError() {
  throw new Error("Test error without sourcemap");
}

throwError();
